--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -1,69 +1,52 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Romance Riot</title>
+</head>
+<body>
+	<header>
+		<div class="image">
+			<p class="logo">Romance Riot</p>
+			<h1>not your mother's romance novel reviews</h1>
+		</div>
+		<nav>
+			<a href="#">Home</a>
+			<a href="#">Books</a>
+			<a href="#">Stuff to Buy</a>
+			<a href="#">Movies + Shows</a>
+			<a href="#">Advice</a>
+		</nav>
+	</header>
+	<main>
+		<section class="description">
+			<p>Welcome to Romance Riot. We bring you romance novel reviews (and other recommendations) through the lense of the modern, 21st century gal. More realness. Less Fabio.</p>	
+		</section>
+		<section id="latestReview" class="blog">
+			<h2>Latest Review</h2>
+			<div>
+				<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
+				<h3>Book Title</h3>
+				<h4>Book Author</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<a href="#" class="cta">Read Full Review</a>
+			</div>
+		</section>
+		<section id="gifts" class="blog">
+			<h2>What To Put on Your Christmas List</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
+			<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
+			<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
+		</section>
+	</main>
+	<footer>
+		<ul>
+			<li>Instagram</li>
+			<li>Pinterest</li>
+		</ul>
+		<a href="mailto:margaret.e.lapp@gmail.com">Send us a message!</a>
+	</footer>
 
-<head><link rel="stylesheet" type="text/css" href="css/style.css"></head>
-
-<header>
-	
-<title>Romance Riot</title>
-
-<div class="image">
-
-	<img src="file:///Users/margaretlapp/Desktop/maggielapp.github.io/unit_3/images/pink.jpg" alt="" />
-      
-      <h1>Romance Riot</h1>
-      <h2>not your mother's romance novel reviews</h2>
-
-</div>
-
-<nav>
-
-	<ul id=navbar>
-	<li class="menu">Home</li>
-	<li class="menu">Books</li>
-	<li class="menu">Stuff to Buy</li>
-	<li class="menu">Movies + Shows</li>
-	<li class="menu">Advice</li>
-	</ul>
-
-</nav>
-</header>
-
-
-<main>
-
-<article class="description">
-
-	<p>Welcome to Romance Riot. We bring you romance novel reviews (and other recommendations) through the lense of the modern, 21st century gal. More realness. Less Fabio. 
-	</p>	
-
-</article>
-
-
-
-	<article class="blog">
-
-	<p>Latest Review</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-	</article>
-
-	<article class="blog">
-
-	<p>What To Put on Your Christmas List</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-</article>
-
-</main>
-
-<footer>
-	<ul>
-		<li>Instagram</li>
-		<li>Pinterest</li>
-	</ul>
-	<a href="mailto:margaret.e.lapp@gmail.com">Send us a message!</a>
-</footer>
-
-
+</body>
 </html>
