--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -8,7 +8,7 @@
 	<header>
 		<div class="image">
 			<p class="logo">Romance Riot</p>
-			<h1>not your mother's romance novel reviews</h1>
+			<h1>More realness. Less Fabio.</h1>
 		</div>
 		<nav>
 			<a href="#">Home</a>
@@ -19,31 +19,37 @@
 		</nav>
 	</header>
 	<main>
-		<section class="description">
-			<p>Welcome to Romance Riot. We bring you romance novel reviews (and other recommendations) through the lense of the modern, 21st century gal. More realness. Less Fabio.</p>	
-		</section>
 		<section id="latestReview" class="blog">
-			<h2>Latest Review</h2>
+			<h2>Review: Romance double feature</h2>
 			<div>
-				<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
-				<h3>Book Title</h3>
-				<h4>Book Author</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<img src="https://images-na.ssl-images-amazon.com/images/I/51xQWDFS3VL._SX303_BO1,204,203,200_.jpg">
+				<h3>A Christmas Bride & Christmas Beau</h3>
+				<h4>Mary Balogh</h4>
+				<p>Regency era British countrysides. Surprise pregnancies. Unexpected love (duh). Read more about Mary Balogh's delightful Christmas double feature.</p>
 				<a href="#" class="cta">Read Full Review</a>
 			</div>
 		</section>
 		<section id="gifts" class="blog">
-			<h2>What To Put on Your Christmas List</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
-			<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
-			<img src="https://s-media-cache-ak0.pinimg.com/236x/eb/22/7e/eb227ec81bfb8c289b2be21af63c10cb.jpg" alt="sample book image">
+			<h2>Naughty or Nice? Christmas gifts for romance lovers</h2>
+			
+			<img src="https://s-media-cache-ak0.pinimg.com/originals/85/ee/8c/85ee8c6835b009a8a63bdd5afffa7167.jpg">
+			<img src="https://doneinstyle.files.wordpress.com/2012/07/anthropologie-candle.jpg" width="250">
+			<img src="https://heavyeditorial.files.wordpress.com/2015/11/book-shirt.jpg?quality=65&strip=all&strip=all" width="300">
+			<p>There's no time as romantic as Christmas and we've gathered all the gifts to bring some romance to the season.</p>
+			<a href="#" class="cta">Check Out the List</a>
 		</section>
 	</main>
 	<footer>
 		<ul>
-			<li>Instagram</li>
-			<li>Pinterest</li>
+			<a href="https://www.instagram.com/?hl=en" target="_blank">
+				<img src="https://lh3.googleusercontent.com/aYbdIM1abwyVSUZLDKoE0CDZGRhlkpsaPOg9tNnBktUQYsXflwknnOn2Ge1Yr7rImGk=w300" width="50">
+			</a>
+			<a href="https://www.pinterest.com/" target="_blank">
+			<img src="https://lh3.googleusercontent.com/SrULGsyndXJk6Gs4Lmv34sOlMDAroy1bzPPr9X1U5oVdv5TAAJX4JkYPO_wQAdP7TBA=w300" width="50">
+			</a>
+			<a href="https://www.youtube.com/" target="_blank">
+			<img src="https://lh5.ggpht.com/jZ8XCjpCQWWZ5GLhbjRAufsw3JXePHUJVfEvMH3D055ghq0dyiSP3YxfSc_czPhtCLSO=w300" width="50">
+			</a>
 		</ul>
 		<a href="mailto:margaret.e.lapp@gmail.com">Send us a message!</a>
 	</footer>
